# gk1-3D-scene-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gk1-3D-scene-renderer.cpp  gk1-3D-scene-renderer.h
assets/shaders/: tetrahedron.frag  tetrahedron.vert
include/core/: Application.h  Window.h
include/rendering/: Renderer.h  ShaderProgram.h  TetrahedronMesh.h
src/: main.cpp
src/app/: main.cpp
src/core/: Application.cpp  Window.cpp
src/rendering/: Renderer.cpp  ShaderProgram.cpp  TetrahedronMesh.cpp
